agregando las 3 paginas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Mi Sitio Web</a>
+  <a class="navbar-brand" href="index.html">Mi Sitio Web</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,13 +18,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Página 1</a>
+        <a class="nav-link" href="pagina1.html">Página 1</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Página 2</a>
+        <a class="nav-link" href="pagina2.html">Página 2</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Página 3</a>
+        <a class="nav-link" href="pagina3.html">Página 3</a>
       </li>
     </ul>
   </div>
@@ -32,12 +32,12 @@
 
 <div class="container mt-5">
   <div class="row">
-    <div class="col-md-6">
-      <img src="https://via.placeholder.com/400" alt="Imagen de ejemplo" class="img-fluid">
+    <div class="col-md-4">
+      <img src="imagen10.jpg" alt="Imagen de ejemplo" class="img-fluid">
     </div>
-    <div class="col-md-6">
-      <h1 class="display-4">Texto Grande</h1>
-      <p class="lead">Este es un texto grande de ejemplo. Puedes modificarlo como desees para adecuarlo a tus necesidades.</p>
+    <div class="col-md-8">
+      <h1 class="display-4">El Futbol en Nuestras Vidas</h1>
+      <p class="lead">El fútbol está marcado por tres elementos fundamentales: estadios, jugadores y trofeos. Desde los emblemáticos estadios europeos hasta los mejores jugadores del mundo como Messi y Ronaldo, y los trofeos más prestigiosos como la Copa del Mundo y la UEFA Champions League, estos aspectos definen la grandeza y la emoción de este deporte.</p>
     </div>
   </div>
 </div>
