cambie la carpeta imagenes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-4">
-      <img src="imagen10.jpg" alt="Imagen de ejemplo" class="img-fluid">
+      <img src="imagenes/imagen10.jpg" alt="Imagen de ejemplo" class="img-fluid">
     </div>
     <div class="col-md-8">
       <h1 class="display-4">El Futbol en Nuestras Vidas</h1>
