--- a/pagina1.html
+++ b/pagina1.html
@@ -52,13 +52,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="imagen1.jpg" alt="First slide">
+          <img class="d-block w-100" src="imagenes/imagen1.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen2.jpg" alt="Second slide">
+          <img class="d-block w-100" src="imagenes/imagen2.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen3.jpg" alt="Third slide">
+          <img class="d-block w-100" src="imagenes/imagen3.jpg" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
