--- a/pagina2.html
+++ b/pagina2.html
@@ -55,13 +55,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="imagen4.jpg" alt="First slide">
+          <img class="d-block w-100" src="imagenes/imagen4.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen5.jpg" alt="Second slide">
+          <img class="d-block w-100" src="imagenes/imagen5.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen6.jpg" alt="Third slide">
+          <img class="d-block w-100" src="imagenes/imagen6.jpg" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
