--- a/pagina3.html
+++ b/pagina3.html
@@ -55,13 +55,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="imagen7.jpg" alt="First slide">
+          <img class="d-block w-100" src="imagenes/imagen7.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen8.jpg" alt="Second slide">
+          <img class="d-block w-100" src="imagenes/imagen8.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen9.jpg" alt="Third slide">
+          <img class="d-block w-100" src="imagenes/imagen9.jpg" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
