--- a/pagina1.html
+++ b/pagina1.html
@@ -32,13 +32,13 @@
 
 <div class="container mt-5">
   <h1>Los 3 Mejores Estadios de Europa</h1>
-  <!-- Inserta aquí tus 3 párrafos, 3 imágenes y 2 componentes de Bootstrap -->
+  
 </div>
 
 <!-- 3 párrafos -->
 <div class="container mt-5">
   <p>Old Trafford, ubicado en Manchester, Inglaterra, es uno de los estadios más icónicos del fútbol mundial, con una capacidad de aproximadamente 74,140 espectadores. Inaugurado en 1910, ha sido el hogar del Manchester United desde entonces, siendo testigo de innumerables momentos históricos en el fútbol inglés y europeo. A lo largo de los años, ha sido renovado y modernizado para mejorar la experiencia de los espectadores, manteniendo su estatus como uno de los templos del fútbol.</p>
-  <p>El Aviva Stadium, situado en Dublín, Irlanda, tiene una capacidad de alrededor de 51,700 espectadores. Inaugurado en 2010, es el hogar de la selección nacional de fútbol de Irlanda y se utiliza también para rugby y otros eventos deportivos y de entretenimiento. Con instalaciones modernas y un diseño arquitectónico impresionante, el Aviva Stadium ofrece una experiencia memorable para los aficionados.</p>
+  <p>El Aviva Stadium, situado en Dublín, Irlanda, tiene una capacidad de alrededor de 51,700 espectadores. Inaugurado en el año 2010, es el hogar de la selección nacional de fútbol de Irlanda y se utiliza también para rugby y otros eventos deportivos y de entretenimiento. Con instalaciones modernas y un diseño arquitectónico impresionante, el Aviva Stadium ofrece una experiencia memorable para los aficionados.</p>
   <p>Por último, el Etihad Stadium, en Manchester, Inglaterra, tiene una capacidad de aproximadamente 53,000 espectadores. Inaugurado en 2003, es el hogar del Manchester City Football Club y fue construido originalmente para los Juegos de la Commonwealth de 2002. A lo largo de los años, ha experimentado expansiones y mejoras para aumentar su capacidad y mejorar la experiencia de los aficionados, siendo conocido por su vibrante ambiente en los partidos del Manchester City.</p>
 </div>
 
