se agrego un boton para ir a pagina 2

--- a/pagina1.html
+++ b/pagina1.html
@@ -73,8 +73,11 @@
   </div>
 
   <!-- Botón de Bootstrap -->
-  <div class="text-center mt-3">
-    <a href="index.html" class="btn btn-primary">Ir a la página principal</a>
+  <div class="my-3 px-4">
+    <div class="d-flex justify-content-between">
+      <a href="index.html" class="btn btn-primary">Ir a la página principal</a>
+      <a href="pagina2.html" class="btn btn-success">Siguiente</a>
+    </div>
   </div>
   
 </div>
